# robotchi

./: .gitignore  BotFather.md  README.md  config.py  conversation.py  log.txt  meme_bot.py  memes.py  pyproject.toml  requirements.txt  tags.py  tools.py
robotchi/: __init__.py
robotchi/handlers/: echo.py  inline_query.py  meme.py  start.py  talk.py  wiki.py
wiki/: Aluminio.html  Oro.html  Plata.html  Roma.html  Uruguay.html  pendulo.html
